# pocketbase

./: HDR_THUMBNAIL_GENERATION_PLAN.md  PLAN.md  SCOPE.md  TODO.md
apis/: file.go  file_test.go  record_crud.go  thumb_materializer.go  thumb_materializer_test.go  thumb_size_selector.go  thumb_size_selector_test.go
core/: base_backup_test.go  collection_model_test.go  field_file.go  field_file_test.go
docs/hdr-thumbnails/: build.md  fixture-analysis.md  operations.md  overview.md  testing.md
scripts/hdrthumb/: build-libultrahdr.sh  build-libvips.sh  build-pocketbase-hdr.sh  install-deps-ubuntu.sh
tests/data/hdr/: current-photo-1.exiftool.json  current-photo-1.identify.txt  current-photo-1.markers.txt  current-photo-2.exiftool.json  current-photo-2.identify.txt  current-photo-2.markers.txt  current-photo-3.exiftool.json  current-photo-3.identify.txt  current-photo-3.markers.txt
tools/filesystem/: filesystem.go  filesystem_hdr_test.go  filesystem_test.go
tools/hdrthumb/: backend.go  backend_disabled.go  backend_ultrahdr.go  backend_ultrahdr_test.go  detect.go  detect_test.go
tools/hdrthumb/cmd/hdrthumb-helper/: CMakeLists.txt  main.cpp
ui/src/fields/file/: settings.js
