cmake_minimum_required(VERSION 3.16)
project(hdrthumb_helper LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(PkgConfig REQUIRED)
pkg_check_modules(UHDR REQUIRED libuhdr)
add_executable(hdrthumb-helper main.cpp)
target_include_directories(hdrthumb-helper PRIVATE ${UHDR_INCLUDE_DIRS})
target_link_directories(hdrthumb-helper PRIVATE ${UHDR_LIBRARY_DIRS})
target_link_libraries(hdrthumb-helper PRIVATE ${UHDR_LIBRARIES} jpeg)
install(TARGETS hdrthumb-helper RUNTIME DESTINATION bin)
